--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<header>
 					<h2>My hobby</h2>
 				</header>
-				<p><img src="./GHOST BY HUNDUN_files/5C5CF56B30.jpeg" width="300px">GHOST have many hobby.GHOST like eat the children who are not sleep and play the computer or phone. GHOST can make many gold.<br>
+				<p><img src="./GHOST BY HUNDUN_files/5C5CF56B30.jpeg" width="300px"><br>GHOST have many hobby.GHOST like eat the children who are not sleep and play the computer or phone. GHOST can make many gold.<br>
 				GHOST is a cute ghost.<br>
 				</p>
 				<footer>
@@ -34,8 +34,8 @@
 				</footer>
 			</section>
 
-		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
+			<article id="first" class="container box s
+		<!-- Feature 1 -->tyle1 right">
 				<a href="file:///C:/Users/141070/Desktop/New%20folder/index.html#" class="image fit"><img src="./GHOST BY HUNDUN_files/cdc80db65042ed4f6beec112b672dac3.png"></a>
 				<div class="inner">
 					<header>
